--- a/app/src/main/res/layout/activity_shop_create.xml
+++ b/app/src/main/res/layout/activity_shop_create.xml
@@ -21,6 +21,9 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="请输入商铺名称"
+                android:textSize="14dp"
+                android:gravity="left|top"
+                android:background="@drawable/textview_border_radius"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -51,6 +54,9 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="请输入商铺地址"
+                android:textSize="14dp"
+                android:gravity="left|top"
+                android:background="@drawable/textview_border_radius"
                 android:inputType="textMultiLine"
                 android:lines="3"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +79,9 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="请输入商铺简介"
+                android:textSize="14dp"
+                android:gravity="left|top"
+                android:background="@drawable/textview_border_radius"
                 android:inputType="textMultiLine"
                 android:lines="3"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +96,9 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="请输入商铺公告"
+                android:background="@drawable/textview_border_radius"
+                android:gravity="left|top"
+                android:textSize="14dp"
                 android:inputType="textMultiLine"
                 android:lines="3"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="商铺公告："
+                android:gravity="left|top"
                 app:layout_constraintBaseline_toBaselineOf="@+id/noticeEdit"
                 app:layout_constraintEnd_toEndOf="@+id/textView9" />
 
@@ -144,6 +157,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:text="保存信息"
+                android:textColor="@color/white"
+                android:background="@drawable/button_border_radius"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
