--- a/app/src/main/res/layout/activity_order_by_account_list.xml
+++ b/app/src/main/res/layout/activity_order_by_account_list.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ScrollView
-        android:background="@color/colorWhite"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/srl_index"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
-        <com.zxxapp.xrecyclerview.XRecyclerView
+        tools:context="com.zhenmeizhixiu.shop.cloudshop.ui.gank.child.IndexFragment">
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/xrv_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
             android:orientation="vertical"
             tools:context="com.zxxapp.mall.maintenance.ui.shopping.ShopListActivity">
-        </com.zxxapp.xrecyclerview.XRecyclerView>
-    </ScrollView>
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
