--- a/app/src/main/res/layout/activity_shop_submit_auth.xml
+++ b/app/src/main/res/layout/activity_shop_submit_auth.xml
@@ -20,6 +20,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="真实姓名"
+            android:background="@drawable/textview_border_radius"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -41,6 +42,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="身份证号码"
+            android:background="@drawable/textview_border_radius"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/realName"
             app:layout_constraintStart_toStartOf="@+id/realName"
